# Coupling-Methods-for-SCRN

./: .gitignore  CMakeLists.txt  CRN.cpp  CRN.h  CTMC_coupling.cpp  Dictionary.cpp  Dictionary.h  Poisson.cpp  Poisson.h  Prob.h  Reflection_coupling.cpp  Reflection_coupling.h
config/: Initial_values.txt  Rates.txt  Reactions.txt
